crates/flux-syntax/tests/snapshots/parser_tests__parse_table_type.snap
---
source: crates/flux-syntax/tests/parser_tests.rs
expression: result
---
Ok(
    SourceFile {
        items: [
            Function(
                Function {
                    is_export: false,
                    name: "process",
                    params: [
                        Param {
                            name: "data",
                            ty: Some(
                                Table {
                                    element: Int(
                                        Span {
                                            start: 21,
                                            end: 24,
                                        },
                                    ),
                                    span: Span {
                                        start: 15,
                                        end: 25,
                                    },
                                },
                            ),
                            span: Span {
                                start: 10,
                                end: 25,
                            },
                        },
                    ],
                    return_type: Some(
                        Table {
                            element: String(
                                Span {
                                    start: 34,
                                    end: 40,
                                },
                            ),
                            span: Span {
                                start: 28,
                                end: 41,
                            },
                        },
                    ),
                    body: Block {
                        stmts: [
                            Var {
                                name: "data",
                                span: Span {
                                    start: 42,
                                    end: 46,
                                },
                            },
                        ],
                        span: Span {
                            start: 41,
                            end: 47,
                        },
                    },
                    labels: [],
                    span: Span {
                        start: 0,
                        end: 47,
                    },
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 47,
        },
    },
)
