crates/flux-syntax/tests/snapshots/parser_tests__parse_temporal_types_duration.snap
---
source: crates/flux-syntax/tests/parser_tests.rs
expression: result
---
Ok(
    SourceFile {
        items: [
            Function(
                Function {
                    is_export: false,
                    name: "calculate_elapsed",
                    params: [
                        Param {
                            name: "start",
                            ty: Some(
                                Timestamp(
                                    Span {
                                        start: 28,
                                        end: 37,
                                    },
                                ),
                            ),
                            span: Span {
                                start: 21,
                                end: 37,
                            },
                        },
                        Param {
                            name: "end",
                            ty: Some(
                                Timestamp(
                                    Span {
                                        start: 44,
                                        end: 53,
                                    },
                                ),
                            ),
                            span: Span {
                                start: 39,
                                end: 53,
                            },
                        },
                    ],
                    return_type: Some(
                        Duration(
                            Span {
                                start: 58,
                                end: 66,
                            },
                        ),
                    ),
                    body: Block {
                        stmts: [
                            Int {
                                value: 0,
                                span: Span {
                                    start: 69,
                                    end: 70,
                                },
                            },
                        ],
                        span: Span {
                            start: 67,
                            end: 72,
                        },
                    },
                    labels: [],
                    span: Span {
                        start: 0,
                        end: 72,
                    },
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 72,
        },
    },
)
