crates/flux-syntax/tests/snapshots/parser_tests__parse_temporal_types_table.snap
---
source: crates/flux-syntax/tests/parser_tests.rs
expression: result
---
Ok(
    SourceFile {
        items: [
            Function(
                Function {
                    is_export: false,
                    name: "get_dates",
                    params: [
                        Param {
                            name: "dates",
                            ty: Some(
                                Table {
                                    element: Date(
                                        Span {
                                            start: 26,
                                            end: 30,
                                        },
                                    ),
                                    span: Span {
                                        start: 20,
                                        end: 31,
                                    },
                                },
                            ),
                            span: Span {
                                start: 13,
                                end: 31,
                            },
                        },
                    ],
                    return_type: Some(
                        Table {
                            element: Timestamp(
                                Span {
                                    start: 42,
                                    end: 51,
                                },
                            ),
                            span: Span {
                                start: 36,
                                end: 52,
                            },
                        },
                    ),
                    body: Block {
                        stmts: [
                            Var {
                                name: "dates",
                                span: Span {
                                    start: 55,
                                    end: 60,
                                },
                            },
                        ],
                        span: Span {
                            start: 53,
                            end: 62,
                        },
                    },
                    labels: [],
                    span: Span {
                        start: 0,
                        end: 62,
                    },
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 62,
        },
    },
)
