crates/flux-syntax/tests/snapshots/parser_tests__parse_temporal_types_time.snap
---
source: crates/flux-syntax/tests/parser_tests.rs
expression: result
---
Ok(
    SourceFile {
        items: [
            Function(
                Function {
                    is_export: false,
                    name: "get_meeting_time",
                    params: [],
                    return_type: Some(
                        Time(
                            Span {
                                start: 25,
                                end: 29,
                            },
                        ),
                    ),
                    body: Block {
                        stmts: [
                            Int {
                                value: 0,
                                span: Span {
                                    start: 32,
                                    end: 33,
                                },
                            },
                        ],
                        span: Span {
                            start: 30,
                            end: 35,
                        },
                    },
                    labels: [],
                    span: Span {
                        start: 0,
                        end: 35,
                    },
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 35,
        },
    },
)
